# UartDmaSimple

./: CMakeLists.txt  mc.sh
src/: main.c
